--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -9,6 +9,20 @@ textarea {
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 48px;
   font-weight: 800;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 200;
+
 }
