Get search bar styling to behave

--- a/src/components/SavedLocationContainer/SavedLocationContainer.scss
+++ b/src/components/SavedLocationContainer/SavedLocationContainer.scss
@@ -1,7 +1,7 @@
 @import '../../scss/index.scss';
 
 .pinned-cities-container {
-  @include margins;
+  margin-left: 50px;
   display: flex;
   width: 50%;
 }
