--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,60 +1,52 @@
 @import '../../scss/index.scss';
 
-// form {
-//   position: relative;
-// }
+form {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 45%;
+  margin-right: 50px;
+}
 
-// input {
-//   width: 45rem;
-//   height: 4.5rem;
-//   border-radius: 22px;
-//   padding-left: 55px;
-//   background-color: $lighter-grey;
-//   // @include whiteBorder;
-//   font-size: 1.75rem;
-//   color: $white;
+input {
+  height: 30px;
+  width: 340px;
+  border-radius: 22px;
+  border-color: 1px solid $light-grey;
+  color: $black;
+  padding-left: 35px;
 
-//   &:focus {
-//     @include focus;
-//   }
-// }
+  &:focus {
+    @include focus;
+  }
+}
 
-// .clear-button {
-//   @include cursor;
-//   position: absolute;
-//   top: 10px;
-//   right: 20px;
-//   color: $white;
-//   border: none;
-//   font-size: 2rem;
+.clear-button {
+  @include cursor;
+  position: absolute;
+  top: 17px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
 
-//   &:hover {
-//     @include transition;
-//   }
+  &:hover {
+    @include transition;
+  }
 
-//   &:focus {
-//     outline: none;
-//   }
-// }
+  &:focus {
+    outline: none;
+  }
+}
 
-// .search-icon {
-//   position: absolute;
-//   top: 1px;
-//   left: 0.8px;
-//   width: 44px;
-//   padding: 5px;
-//   background-color: #8EFF6F;
-//   border-radius: 20px;
-//   @include whiteBorder;
-// }
+.search-icon {
+  position: absolute;
+  top: 15px;
+  right: 350px;
+  width: 20px;
+}
 
-// .clear-icon {
-//   width: 15px;
-// }
-
-// .logo-container {
-//   position: relative;
-//   top: 0px;
-//   right: 0px;
-// }
+.clear-icon {
+  width: 15px;
+}
 
