Style temp container

--- a/src/components/DailyForecastDetails/DailyForecastDetails.scss
+++ b/src/components/DailyForecastDetails/DailyForecastDetails.scss
@@ -1,1 +1,7 @@
 @import '../../scss/index.scss';
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
