--- a/src/components/TemperatureCard/TemperatureCard.scss
+++ b/src/components/TemperatureCard/TemperatureCard.scss
@@ -1,1 +1,44 @@
 @import '../../scss/index.scss';
+
+.temp-card-container {
+  width: 300px;
+  height: 300px;
+  background-color: #0093E9;
+  background-image: linear-gradient(341deg, #0093E9 0%, #00ddff 100%);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-temp {
+  font-size: 100px;
+  line-height: .5;
+  font-weight: 600;
+  margin: 50px 0 0 0;
+}
+
+.white-overlay {
+  background-color: white;
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mini-temp-container {
+ display: flex;
+}
+
+.mini-temp {
+  font-size: 25px;
+  font-weight: 800;
+}
+
+.low {
+  margin-left: 7px;
+  color:$dark-grey;
+}
