fix componentDidUpdate bug

--- a/src/components/Pin/Pin.scss
+++ b/src/components/Pin/Pin.scss
@@ -17,3 +17,9 @@
   background: transparent;
   @include cursor;
 }
+
+.redirect-location {
+  border: none;
+  background: transparent;
+  @include cursor;
+}
